--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,10 @@ AllCops:
     - "tmp/**/*"
     - "vendor/**/*"
 
+Rails/FilePath:
+  Exclude:
+    - "config/environments/development.rb"
+
 # 日本語のコメントを許可
 Style/AsciiComments:
   Enabled: false
